solves https://luceeserver.atlassian.net/browse/LDEV-1138